fixed spacing

--- a/styles/spacing.css
+++ b/styles/spacing.css
@@ -11,9 +11,13 @@
   .header, h1, h2, h3, h4, h5, h6, p, pre, form {
     padding: 1rem 2rem !important;
   }
+
+  p+p {
+    padding: 0 2rem 1rem !important;
+  }
 }
 
-.header, h1, h2, h3, h4, h5, h6, pre, form {
+.header, h1, h2, h3, h4, h5, h6, pre, p, form {
   padding: 1rem;
 }
 
@@ -42,5 +46,5 @@ p {
 }
 
 p+p {
-  padding: 0 2rem 1rem !important;
+  padding: 0 1rem 1rem;
 }
